chat channel controller